Bug 96944 - FORMATTING Stacked column chart does not show connection lines
Summary: FORMATTING Stacked column chart does not show connection lines
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2016-01-07 12:48 UTC by ftr
Modified: 2024-05-10 21:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc spreadsheet with data & chart (25.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-01-07 12:48 UTC, ftr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ftr 2016-01-07 12:48:37 UTC
Created attachment 121777 [details]
Calc spreadsheet with data & chart

In the chart module Format data series > Options > Settings > Connection Lines clicked does not produce connection lines for stacked columns
Comment 1 raal 2016-01-09 13:11:41 UTC
I can confirm with Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3
and Version: 5.2.0.0.alpha0+
Build ID: c1258abe50f1508ea0f628ff963bc1914ab86b67
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-02_01:43:32
Comment 2 QA Administrators 2017-03-06 14:01:36 UTC Comment hidden (noise, obsolete)
Comment 3 QA Administrators 2019-12-03 14:54:50 UTC Comment hidden (noise)
Comment 4 QA Administrators 2021-12-03 04:43:20 UTC Comment hidden (noise)
Comment 5 QA Administrators 2023-12-04 03:17:28 UTC Comment hidden (noise)
Comment 6 kurt.nordback@protonmail.com 2024-01-09 21:50:12 UTC
Proposed fix submitted here: https://gerrit.libreoffice.org/c/core/+/161626
Comment 7 Commit Notification 2024-03-11 13:57:32 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46e96625e9dc3c452a7323c8bf231fea3acab606

tdf#96944: Stacked column chart does not show connection lines

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.