tdf#96944: Stacked column chart does not show connection lines

Change-Id: I14727e8a55231b6695c5a59dd495cd03b15d69f9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161626
Tested-by: Jenkins
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>